@@ -1,3 +1,6 @@
+01/25/2010
+- bugfix cache resource was not loaded when caching was globally off but enabled at a template object
+
 01/22/2010
 - new method $smarty->createData([$parent]) for creating a data object (required for bugfixes below)
 - bugfix config_load() method now works also on a data object
